--- a/index.css
+++ b/index.css
@@ -1,19 +1,19 @@
 .box {
-  width: 150px;
-  height: 150px;
-  border: 1px solid black;
-  padding: 10px;
-  margin: 0;
-  text-align: center;
+    width: 150px;
+    height: 150px;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 0;
+    text-align: center;
 }
 .blue {
-  background: lightblue;
+    background: lightgray;
 }
 .container {
-  flex-direction: column;
-  border: 1px solid black;
-  width: 700px;
-  height: 700px;
+    flex-direction: column;
+    border: 1px solid black;
+    width: 700px;
+    height: 700px;
 }
 .center {
     display: flex;
@@ -22,23 +22,68 @@
 }
 .images {
     border: 1px solid black;
-
     flex-direction: row;
-    display:flex;
+    display: flex;
     width: 100%;
     justify-content: space-around;
-    align-items:center;
+    align-items: center;
 }
 button {
-        height: 40px;
-        width: 60px;
-        margin: 20px;
-
-
+    height: 100px;
+    width: 100px;
+    margin: 20px;
+    font-size: 33px;
+    color: cornflowerblue;
+    background-color: peachpuff;
+    border-radius: 50%;
+}
+button:hover {
+    background-color: lightgray;
+    cursor: pointer;
 }
 p {
-   font-size: 25px;
-   color: burlywood;   
-   font-weight: bold;  
-   font-family: monospace;
+    font-size: 25px;
+    color: red;
+    font-weight:500;
+    font-family: monospace;
+}
+.selectedMove {
+        color: cornflowerblue;
+        font-size: 33px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 150px;
+        height: 150px;
+        border: 1px solid black;
+        padding: 10px;
+        margin: 0px;
+}
+
+.left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.right{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+h2 {
+    color: gray;
+}
+
+.cpu {
+    color: red;
+    font-size: 33px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 150px;
+    height: 150px;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 0px;
 }
